--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "杨章波 <yangzhangbo@91jinrong.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.base.js"
+    "build": "webpack --config webpack.base.js",
+    "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "dependencies": {
     "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.4.8"
   },
@@ -17,7 +19,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-alpha.10",
+    "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "mini-css-extract-plugin": "^1.2.1",
@@ -26,8 +28,8 @@
     "typescript": "^4.0.5",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
+    "webpack": "4.44.0",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.3.0"
   }
