--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "dependencies": {
+    "element-ui": "^2.14.0",
+    "path": "^0.12.7",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.4.8"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
