--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "mini-css-extract-plugin": "^1.2.1",
+    "postcss-calc": "^7.0.5",
     "postcss-loader": "^4.0.4",
+    "precss": "^4.0.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.9",
     "typescript": "^4.0.5",
     "vue-loader": "^15.9.5",
