--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "highlight.js": "^10.4.0",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "markdown-it": "^12.0.2",
+    "markdown-it-anchor": "^6.0.1",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-table-of-contents": "^0.5.1",
     "mini-css-extract-plugin": "^1.2.1",
     "postcss-calc": "^7.0.5",
     "postcss-loader": "^4.0.4",
